adds if statement for empy search submission and clears the text section on next press of go button

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">
+        <header class="row">
             <h1 class="text-center">Recipe Finder</h1>
-        </div>
-        <div class="row">
+        </header>
+        <section class="row">
             <div class="col-lg-6">
                 <div class="input-group">
                 <input type="text" class="form-control" id="term" placeholder="What would you like to make?">
@@ -23,7 +23,12 @@
                     <button class="btn btn-default" type="button" id="search">Go!</button>
                 </span>
             </div>
-        </div>
+        </section>
+        <section class="row">
+            <div class="col-lg-6">
+                <p id="status"></p>
+            </div>
+        </section>
     </div>
 </body>
 </html>
