adds getJSON function using Proxy to deal with CORS

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
                 <p id="status"></p>
             </div>
         </section>
+        <!--<section class="row">
+            <div class="col-lg-6">
+                <div id="poster"></div>
+            </div>
+        </section>-->
     </div>
 </body>
 </html>
