--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="app.css">
     <script src="scripts.js"></script>
 </head>
 <body>
@@ -29,11 +30,11 @@
                 <p id="status"></p>
             </div>
         </section>
-        <!--<section class="row">
+        <section class="row">
             <div class="col-lg-6">
-                <div id="poster"></div>
+                <div id="result"></div>
             </div>
-        </section>-->
+        </section>
     </div>
 </body>
 </html>
