--- a/favourites.html
+++ b/favourites.html
@@ -13,6 +13,18 @@
 </head>
 <body>
     <div class="container">
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">Recipe Finder</a>
+                </div>
+                <div>
+                    <ul class="nav navbar-nav">
+                        <li><a href="#">Search </a></li>
+                        <li><a href="#">Favourites</a></li>
+                    </ul>
+                </div>
+        </nav>
         <header class="row">
             <h1 class="text-center">Favourites</h1>
         </header>
