--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link href="css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+        <link rel="icon" type="image/x-icon" href="media/favicon.ico"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Leesa Recipes</title>
     </head>
