--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link href="css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
         <link rel="icon" type="image/x-icon" href="media/favicon.ico"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Leesa Recipes</title>
@@ -11,6 +11,6 @@
         <div id="App"></div>
         <script src="js/bundle.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script src="js/bootstrap.min.js" crossorigin="anonymous"></script>
+        <script src="js/bootstrap.min.js"></script>
     </body>
 </html>
