--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#">Recipe Finder</a>
+                    <a class="navbar-brand" href="index.html">Recipe Finder</a>
                 </div>
                 <div>
                     <ul class="nav navbar-nav">
-                        <li><a href="#">Search </a></li>
-                        <li><a href="#">Favourites</a></li>
+                        <li><a href="index.html">Search </a></li>
+                        <li><a href="favourites.html"  id="favouritesLink">Favourites</a></li>
                     </ul>
                 </div>
         </nav>
