Removes an item from local storage and reloads page

--- a/favourites.html
+++ b/favourites.html
@@ -30,7 +30,7 @@
         </header>
         <section class="row">
             <div class="col-lg-6">
-                <p id="faves"></p>
+                <div id="faveDisplay"></div>
             </div>
         </section>
     </div>
