--- a/favourites.html
+++ b/favourites.html
@@ -29,7 +29,12 @@
             <h1 class="text-center">Favourites</h1>
         </header>
         <section class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-12">
+                <p class="favStatus"></p>
+            </div>
+        </section>
+        <section class="row">
+            <div class="col-lg-12">
                 <div id="faveDisplay"></div>
             </div>
         </section>
