replaces go button with search icon

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                 <div class="input-group">
                 <input type="text" class="form-control" id="term" placeholder="What would you like to make?">
                 <span class="input-group-btn">
-                    <button class="btn btn-default" type="button" id="search">Go!</button>
+                    <button class="btn btn-default" type="button" id="search">
+                        <span class="glyphicon glyphicon-search"></span>
+                    </button>
                 </span>
             </div>
         </section>
