--- a/favourites.html
+++ b/favourites.html
@@ -30,7 +30,7 @@
         </header>
         <section class="row">
             <div class="col-lg-12">
-                <p class="favStatus"></p>
+                <p id="favStatus"></p>
             </div>
         </section>
         <section class="row">
