--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Recipe Finder</title>
+    <link href="https://fonts.googleapis.com/css?family=Libre+Franklin" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -28,20 +29,20 @@
         <header class="row">
             <h1 class="text-center">Recipe Finder</h1>
         </header>
-        <section class="row">
-            <div class="col-lg-6">
+        <section class="row mainRow">
+            <div class="col-lg-12">
                 <div class="input-group">
-                <input type="text" class="form-control" id="term" placeholder="What would you like to make?">
-                <span class="input-group-btn">
+                    <span class="input-group-btn">
                     <button class="btn btn-default" type="button" id="search">
                         <span class="glyphicon glyphicon-search"></span>
                     </button>
-                </span>
-            </div>
+                    </span>
+                    <input type="text" class="form-control text-center" id="term" placeholder="What would you like to make?">
+                </div>
         </section>
-        <section class="row">
+        <section class="row mainRow">
             <div class="col-lg-12">
-                <p id="status"></p>
+                <p id="status" class="text-center"></p>
             </div>
         </section>
         <section class="row">
